--- a/sass/main.scss
+++ b/sass/main.scss
@@ -86,3 +86,11 @@ img{
 .fa-check{
   color: green;
 }
+
+
+/* Preguntas frecuentes */
+
+.preguntas_frecuentes{
+  border-collapse: separate;
+  border-spacing: 20px;
+}
